[package]
name = "rgrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.3", features = ["derive"] }
colored = "2.0.0"
glob = "0.3.1"
itertools = "0.10.5"
rayon = "1.7.0"
regex = "1.7.3"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
